Fixed text overflow at smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ section > img {
     text-align: center;
   }
   .grid {
-    grid-template-rows: repeat(3, 400px);
+    grid-template-rows: repeat(3, 1fr);
   }
 
   .benifits {
